--- a/Presentation/Nop.Web/appsettings.json
+++ b/Presentation/Nop.Web/appsettings.json
@@ -48,7 +48,7 @@
     "IgnoreStartupTasks": false,
 
     //Enable if you want to clear /Plugins/bin directory on application startup
-    "ClearPluginShadowDirectoryOnStartup": true,
+    "ClearPluginShadowDirectoryOnStartup": false,
 
     ///Enable if you want to load an assembly into the load-from context, bypassing some security checks
     "UseUnsafeLoadAssembly": true
